# tftpc

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rustfmt.toml
src/: client.rs  lib.rs  lorem.txt
