[package]
name = "ttftp"
version = "0.2.0"
authors = ["Melvin van der Linde"]
edition = "2021"
rust-version = "1.81"
documentation = "https://docs.rs/ttftp"

description = "A sans-io TFTP library. Currently provides only a client and does not support options."
categories = ["no-std", "no-std::no-alloc", "network-programming"]
keywords = ["tftp", "client", "sans-io"]

license = "MIT OR Apache-2.0"

[dependencies]
macro_rules_attribute = "0.2.0"
netascii = "0.1.0"
nom = { version = "7.1.3", default-features = false }
